# mfft

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
samples/: main.py
src/mdfft/candle/: __init__.py  candle.py  candles.py  pandas_candles.py
src/mdfft/fractal/: __init__.py  fractal.py  fractal_master.py
src/mdfft/painter/: painter.py  styler.py
src/mdfft/parsers/: __init__.py  raw_candle.py  simple_parser.py
src/mdfft/timeframe/: timeframe.py
src/mdfft/trader/: __init__.py
src/mfft/: __init__.py
src/mfft/candle/: candles.py  pandas_candles.py
src/mfft/fractal/: fractal.py  fractal_line.py  fractal_master.py
src/mfft/painter/: __init__.py  painter.py  styler.py
src/mfft/parsers/: raw_candle.py
src/mfft/timeframe/: __init__.py  timeframe.py
src/mfft/trader/: trader.py
tests/: __init__.py  bars.txt  bars_fractal.txt  base_test.py  test_bars.py  test_fractal.py  test_pandas_bars.py  test_tf.py  test_trader.py
