[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffft"
version = "1.0.1"
authors = [
  { name="Evan Shamal", email="puuxxx1@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
