[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdfft"
version = "1.0.6"
authors = [
  { name="Evan Shamal", email="puuxxx1@gmail.com" },
]
description = "Market Data Form Finder Toolkit (MDFFT). The project goal is to make working with a raw market data easier."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/shai-trading/mfft"
Issues = "https://github.com/shai-trading/mfft/issues"
